# wiring

./: .gitignore  .project-settings.yml  .travis.yml  LICENSE  bumpversion.sh  default.nix  readme.md  release.nix  rwst-wiring.cabal  shell.nix  uploadrelease.sh  wiring.cabal
nix/: wiring.nix
src/Control/Monad/: Wiring.hs
src/Control/Monad/RWS/Lazy/: Wiring.hs
src/Control/Monad/RWS/Strict/: Wiring.hs
src/Control/Monad/Reader/: Wiring.hs
src/Control/Monad/Reader/Class/: Wiring.hs
src/Control/Monad/State/Lazy/: Wiring.hs
src/Control/Monad/State/Strict/: Wiring.hs
src/Control/Monad/Trans/RWS/Lazy/: Wiring.hs
src/Control/Monad/Trans/RWS/Strict/: Wiring.hs
src/Control/Monad/Trans/Reader/: Wiring.hs
src/Control/Monad/Trans/State/Lazy/: Wiring.hs
src/Control/Monad/Trans/State/Strict/: Wiring.hs
src/Control/Monad/Trans/Writer/Lazy/: Wiring.hs
src/Control/Monad/Trans/Writer/Strict/: Wiring.hs
src/Control/Monad/Wiring/: TH.hs  Types.hs
src/Control/Monad/Writer/Lazy/: Wiring.hs
src/Control/Monad/Writer/Strict/: Wiring.hs
test/Control/Monad/: WiringSpec.hs
test/Control/Monad/Reader/: WiringSpec.hs
test/Control/Monad/Reader/Class/: WiringSpec.hs
test/Control/Monad/State/Lazy/: WiringSpec.hs
test/Control/Monad/State/Strict/: WiringSpec.hs
test/Control/Monad/Trans/Reader/: WiringSpec.hs
test/Control/Monad/Trans/State/Lazy/: WiringSpec.hs
test/Control/Monad/Trans/State/Strict/: WiringSpec.hs
test/Control/Monad/Writer/Lazy/: WiringSpec.hs
test/Control/Monad/Writer/Strict/: WiringSpec.hs
(+2 files in other folders)
