name:                  rwst-wiring
version:               0.1.0.0
author:                Sean Parsons
maintainer:            git@futurenotfound.com
build-type:            Simple
cabal-version:         >=1.10

library
  build-depends:       base >=4.6 && <4.7,
                       template-haskell >= 2.7 && < 2.11,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Control.Monad.Trans.Reader.Wiring,
                       Control.Monad.Trans.Writer.Lazy.Wiring,
                       Control.Monad.Trans.Writer.Strict.Wiring,
                       Control.Monad.Trans.RWS.Lazy.Wiring,
                       Control.Monad.Trans.RWS.Strict.Wiring
test-suite tests
  build-depends:       base >=4.6 && <4.7,
                       template-haskell >= 2.7 && < 2.11,
                       transformers,
                       rwst-wiring,
                       QuickCheck -any,
                       hspec -any
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  buildable:           True
  default-language:    Haskell2010
  hs-source-dirs:      test
